--- a/TaskManager/src/view/Task.fxml
+++ b/TaskManager/src/view/Task.fxml
@@ -2,10 +2,7 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -68,50 +65,48 @@
                   <Font size="16.0" />
                </font>
             </Text>
-            <TextArea fx:id="NewTask_description" layoutX="123.0" layoutY="33.0" prefHeight="66.0" prefWidth="348.0" />
-            <Text fx:id="Task_author" layoutX="30.0" layoutY="137.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
+            <TextArea fx:id="Task_description" editable="false" layoutX="123.0" layoutY="33.0" prefHeight="79.0" prefWidth="494.0" />
+            <Text fx:id="Task_author" layoutX="30.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Text fx:id="Task_author" layoutX="96.0" layoutY="135.0" strokeType="OUTSIDE" strokeWidth="0.0" wrappingWidth="202.0" />
+            <Label fx:id="Task_author" layoutX="89.0" layoutY="122.0" prefHeight="17.0" prefWidth="385.0" />
             <Text fx:id="Task_creationDate" layoutX="30.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <DatePicker fx:id="Task_creationDate" layoutX="158.0" layoutY="162.0" />
+            <Label fx:id="Task_creationDate" layoutX="155.0" layoutY="162.0" prefHeight="17.0" prefWidth="306.0" />
             <Text fx:id="Task_priority" layoutX="30.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <ComboBox layoutX="94.0" layoutY="194.0" prefWidth="150.0" />
+            <Label fx:id="Task_priority" layoutX="96.0" layoutY="198.0" prefHeight="17.0" prefWidth="356.0" />
             <Text fx:id="Task_state" layoutX="30.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="State :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <RadioButton fx:id="Task_inProgress" layoutX="75.0" layoutY="238.0" mnemonicParsing="false" text="In progress" />
-            <RadioButton fx:id="Task_suspended" layoutX="169.0" layoutY="238.0" mnemonicParsing="false" text="Suspended" />
-            <RadioButton fx:id="Task_finished" layoutX="267.0" layoutY="238.0" mnemonicParsing="false" text="Finished" />
-            <Text fx:id="Task_deadline" layoutX="32.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
+            <Label fx:id="Task_state" layoutX="95.0" layoutY="237.0" prefHeight="17.0" prefWidth="306.0" />
+            <Text fx:id="Task_deadline" layoutX="33.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <DatePicker fx:id="Task_deadline" layoutX="110.0" layoutY="269.0" />
-            <Text fx:id="Task_performer" layoutX="32.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
+            <Label fx:id="Task_deadline" layoutX="109.0" layoutY="272.0" prefHeight="17.0" prefWidth="261.0" />
+            <Text fx:id="Task_performer" layoutX="32.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assigned to :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <ComboBox layoutX="116.0" layoutY="305.0" prefWidth="150.0" />
-            <Button fx:id="Task_validateChanges" layoutX="372.0" layoutY="318.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="342.0" text="Validate changes">
+            <Button fx:id="Task_edit" layoutX="566.0" layoutY="310.0" mnemonicParsing="false" onAction="#editTask" prefHeight="41.0" prefWidth="175.0" text="Edit">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
+            <Label fx:id="Task_performer" layoutX="123.0" layoutY="310.0" prefHeight="17.0" prefWidth="233.0" />
          </children>
       </AnchorPane>
    </children>
