--- a/TaskManager/src/view/PreviewTask.fxml
+++ b/TaskManager/src/view/PreviewTask.fxml
@@ -6,6 +6,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseClicked="#openTask" prefHeight="150.0" prefWidth="150.0" style="-fx-border-width: 2;" styleClass="GridPane" stylesheets="@PreviewTask.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerPreviewTask">
   <columnConstraints>
@@ -77,6 +78,7 @@
             <Insets left="10.0" />
          </GridPane.margin>
       </Label>
+      <Text fx:id="TaskPreview_id" disable="true" strokeType="OUTSIDE" strokeWidth="0.0" visible="false" />
    </children>
    <padding>
       <Insets left="10.0" />
