--- a/TaskManager/src/view/Task.fxml
+++ b/TaskManager/src/view/Task.fxml
@@ -13,7 +13,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerTask">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="135.0" />
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="339.0" />
@@ -60,43 +60,43 @@
       </Text>
       <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="2">
          <children>
-            <Text fx:id="Task_description" layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
+            <Text layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
                <font>
                   <Font size="16.0" />
                </font>
             </Text>
             <TextArea fx:id="Task_description" editable="false" layoutX="123.0" layoutY="33.0" prefHeight="79.0" prefWidth="494.0" />
-            <Text fx:id="Task_author" layoutX="30.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
+            <Text layoutX="30.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
             <Label fx:id="Task_author" layoutX="89.0" layoutY="122.0" prefHeight="17.0" prefWidth="385.0" />
-            <Text fx:id="Task_creationDate" layoutX="30.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
+            <Text layoutX="30.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
             <Label fx:id="Task_creationDate" layoutX="155.0" layoutY="162.0" prefHeight="17.0" prefWidth="306.0" />
-            <Text fx:id="Task_priority" layoutX="30.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
+            <Text layoutX="30.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
             <Label fx:id="Task_priority" layoutX="96.0" layoutY="198.0" prefHeight="17.0" prefWidth="356.0" />
-            <Text fx:id="Task_state" layoutX="30.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="State :">
+            <Text layoutX="30.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="State :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
             <Label fx:id="Task_state" layoutX="95.0" layoutY="237.0" prefHeight="17.0" prefWidth="306.0" />
-            <Text fx:id="Task_deadline" layoutX="33.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
+            <Text layoutX="33.0" layoutY="286.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
             <Label fx:id="Task_deadline" layoutX="109.0" layoutY="272.0" prefHeight="17.0" prefWidth="261.0" />
-            <Text fx:id="Task_performer" layoutX="32.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assigned to :">
+            <Text layoutX="32.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assigned to :">
                <font>
                   <Font size="15.0" />
                </font>
