--- a/TaskManager/src/view/TaskEdit.fxml
+++ b/TaskManager/src/view/TaskEdit.fxml
@@ -16,16 +16,19 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerTask">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="135.0" />
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="339.0" />
+      <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="135.0" />
       <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="135.0" />
   </columnConstraints>
   <rowConstraints>
     <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="29.0" valignment="TOP" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="383.0" minHeight="10.0" prefHeight="383.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="383.0" minHeight="10.0" prefHeight="383.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
       <Label text="Task Manager" GridPane.columnIndex="1">
@@ -43,12 +46,12 @@
             <Insets top="95.0" />
          </GridPane.margin>
       </Line>
-      <Circle fill="WHITE" radius="27.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Circle fill="WHITE" radius="27.0" stroke="BLACK" strokeType="INSIDE" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets bottom="30.0" top="6.0" />
          </GridPane.margin>
       </Circle>
-      <Label text="LOGO" GridPane.columnIndex="1" GridPane.rowIndex="1">
+      <Label text="LOGO" GridPane.columnIndex="1" GridPane.rowIndex="2">
          <GridPane.margin>
             <Insets top="25.0" />
          </GridPane.margin>
@@ -61,53 +64,53 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <AnchorPane prefHeight="200.0" prefWidth="200.0" GridPane.columnSpan="3" GridPane.rowIndex="2">
+      <AnchorPane prefHeight="367.0" prefWidth="577.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
          <children>
             <Text fx:id="Task_description" layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
                <font>
                   <Font size="16.0" />
                </font>
             </Text>
-            <TextArea fx:id="NewTask_description" layoutX="123.0" layoutY="33.0" prefHeight="66.0" prefWidth="443.0" />
+            <TextArea fx:id="EditTask_description" layoutX="123.0" layoutY="33.0" prefHeight="66.0" prefWidth="443.0" />
             <Text fx:id="Task_author" layoutX="30.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Author :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <Label fx:id="Task_author" layoutX="89.0" layoutY="122.0" prefHeight="17.0" prefWidth="385.0" />
+            <Label fx:id="EditTask_author" layoutX="89.0" layoutY="122.0" prefHeight="17.0" prefWidth="385.0" />
             <Text fx:id="Task_creationDate" layoutX="30.0" layoutY="177.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date of creation : ">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <DatePicker fx:id="Task_creationDate" layoutX="158.0" layoutY="162.0" />
+            <Label fx:id="EditTask_creationDate" layoutX="156.0" layoutY="162.0" prefHeight="17.0" prefWidth="118.0" />
             <Text fx:id="Task_priority" layoutX="30.0" layoutY="213.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Priority :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <ComboBox layoutX="94.0" layoutY="194.0" prefWidth="150.0" />
+            <ComboBox fx:id="EditTask_priority" layoutX="94.0" layoutY="194.0" prefWidth="150.0" />
             <Text fx:id="Task_state" layoutX="30.0" layoutY="252.0" strokeType="OUTSIDE" strokeWidth="0.0" text="State :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <RadioButton fx:id="Task_inProgress" layoutX="75.0" layoutY="238.0" mnemonicParsing="false" text="In progress" />
-            <RadioButton fx:id="Task_suspended" layoutX="169.0" layoutY="238.0" mnemonicParsing="false" text="Suspended" />
-            <RadioButton fx:id="Task_finished" layoutX="267.0" layoutY="238.0" mnemonicParsing="false" text="Finished" />
+            <RadioButton fx:id="EditTask_state_in_progress" layoutX="75.0" layoutY="238.0" mnemonicParsing="false" text="In progress" />
+            <RadioButton fx:id="EditTask_state_suspended" layoutX="169.0" layoutY="238.0" mnemonicParsing="false" text="Suspended" />
+            <RadioButton fx:id="EditTask_state_finished" layoutX="267.0" layoutY="238.0" mnemonicParsing="false" text="Finished" />
             <Text fx:id="Task_deadline" layoutX="32.0" layoutY="287.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Deadline :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <DatePicker fx:id="Task_deadline" layoutX="110.0" layoutY="269.0" />
+            <DatePicker fx:id="EditTask_deadline" layoutX="110.0" layoutY="269.0" />
             <Text fx:id="Task_performer" layoutX="32.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Assign to :">
                <font>
                   <Font size="15.0" />
                </font>
             </Text>
-            <ComboBox layoutX="116.0" layoutY="305.0" prefWidth="150.0" />
-            <Button fx:id="Task_validateChanges" layoutX="372.0" layoutY="318.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="342.0" text="Validate changes">
+            <ComboBox fx:id="EditTask_performer" layoutX="116.0" layoutY="305.0" prefWidth="150.0" />
+            <Button fx:id="Task_validateChanges" layoutX="585.0" layoutY="302.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="127.0" text="Save">
                <font>
                   <Font size="24.0" />
                </font>
