--- a/TaskManager/src/view/Task.fxml
+++ b/TaskManager/src/view/Task.fxml
@@ -107,6 +107,7 @@
                </font>
             </Button>
             <Label fx:id="Task_performer" layoutX="123.0" layoutY="310.0" prefHeight="17.0" prefWidth="233.0" />
+            <Label fx:id="Task_Title" layoutX="356.0" layoutY="14.0" text="Label" />
          </children>
       </AnchorPane>
    </children>
