--- a/TaskManager/src/view/TaskEdit.fxml
+++ b/TaskManager/src/view/TaskEdit.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -27,6 +28,7 @@
     <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="29.0" valignment="TOP" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
     <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="158.0" minHeight="0.0" prefHeight="65.0" valignment="TOP" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="383.0" minHeight="10.0" prefHeight="383.0" vgrow="SOMETIMES" />
   </rowConstraints>
@@ -64,7 +66,7 @@
             <Font size="20.0" />
          </font>
       </Text>
-      <AnchorPane prefHeight="367.0" prefWidth="577.0" GridPane.columnSpan="3" GridPane.rowIndex="4">
+      <AnchorPane prefHeight="367.0" prefWidth="577.0" GridPane.columnSpan="3" GridPane.rowIndex="5">
          <children>
             <Text fx:id="Task_description" layoutX="30.0" layoutY="52.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Description :">
                <font>
@@ -110,12 +112,14 @@
                </font>
             </Text>
             <ComboBox fx:id="EditTask_performer" layoutX="116.0" layoutY="305.0" prefWidth="150.0" />
-            <Button fx:id="Task_validateChanges" layoutX="585.0" layoutY="302.0" mnemonicParsing="false" prefHeight="51.0" prefWidth="127.0" text="Save">
+            <Button fx:id="Task_validateChanges" layoutX="566.0" layoutY="265.0" mnemonicParsing="false" onAction="#saveChanges" prefHeight="51.0" prefWidth="127.0" text="Save">
                <font>
                   <Font size="24.0" />
                </font>
             </Button>
          </children>
       </AnchorPane>
+      <TextField fx:id="EditTask_Title" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+      <Label text="Title :" GridPane.rowIndex="4" />
    </children>
 </GridPane>
