--- a/TaskManager/bin/view/PreviewTask.css
+++ b/TaskManager/bin/view/PreviewTask.css
@@ -1,6 +1,8 @@
 /* JavaFX CSS - Leave this comment until you have at least create one rule which uses -fx-Property */
 
-.GridPane {
-	-fx-border-color: black;
-	-fx-border-radius: 15;
+GridPane {
+	-fx-border-color: white;
+	-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 20, 0, 0, 0);
+	-fx-background-color: grey;
+	-fx-border-width:2;
 }
