--- a/TaskManager/src/view/App.fxml
+++ b/TaskManager/src/view/App.fxml
@@ -16,7 +16,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="775.0" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerApp">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="775.0" stylesheets="@App.css" xmlns="http://javafx.com/javafx/8.0.60" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ControllerApp">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.0" minWidth="10.0" prefWidth="135.0" />
     <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="495.0" minWidth="10.0" prefWidth="339.0" />
@@ -68,15 +68,15 @@
             <Insets top="5.0" />
          </GridPane.margin>
       </ImageView>
-      <MenuButton fx:id="App_Options" mnemonicParsing="false" prefHeight="30.0" prefWidth="80.0" text="Options" GridPane.rowIndex="1">
+      <MenuButton fx:id="App_Options" mnemonicParsing="false" prefHeight="0.0" prefWidth="130.0" text="Options" GridPane.columnIndex="2" GridPane.hgrow="NEVER" GridPane.rowIndex="1" GridPane.vgrow="NEVER">
         <items>
           <MenuItem mnemonicParsing="false" text="Action 1" />
           <MenuItem mnemonicParsing="false" text="Action 2" />
         </items>
       </MenuButton>
-      <Button fx:id="App_printButton" mnemonicParsing="false" onAction="#handlePrint" text="Button" GridPane.rowIndex="1" GridPane.valignment="CENTER">
+      <Button fx:id="App_printButton" mnemonicParsing="false" onAction="#handlePrint" prefHeight="30.0" prefWidth="124.0" GridPane.rowIndex="1" GridPane.valignment="CENTER">
          <GridPane.margin>
-            <Insets left="100.0" />
+            <Insets />
          </GridPane.margin>
       </Button>
    </children>
